--- a/main.css
+++ b/main.css
@@ -34,6 +34,9 @@
    text-decoration: none;
  }
 
+.navigation :hover .logo{
+    opacity: 1;
+}
 
 .navigation a:hover {
    color: white;
@@ -41,4 +44,52 @@
 
 .navigation a:active {
    border-bottom: 4px solid black;
+}
+
+/* index.html - about page */
+
+
+.container {
+    background-color: rgb(243, 243, 235);
+    padding-top: 20px;
+    width: 100%;
+    height: 500px;
+}
+
+.video-bg {
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.mainText {
+    padding-left: 200px;
+    padding-top: 150px;
+    width: 400px;
+
+}
+
+.mainText h1{
+    font-family: 'Squada one',cursive;
+    font-size: 40px;
+    font-weight: normal;
+}
+
+.mainText p {
+    font-family: 'Oswald', cursive;
+}
+
+.mainText h1:hover {
+    color: rgba(247, 8, 175, 0.849);
+    box-shadow: 5px 5px;
+}
+
+.mainText2 {
+    text-align: right;
+    padding-right: 200px;
+    font-family: 'Squada one', cursive;
 }
