--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@
 
 .navigation a:hover {
    color: white;
+   transition: 0.3s;
 }
 
 .navigation a:active {
@@ -53,7 +54,8 @@
     background-color: rgb(243, 243, 235);
     padding-top: 20px;
     width: 100%;
-    height: 500px;
+    height: auto;
+    padding-bottom: 20px;
 }
 
 .video-bg {
@@ -66,11 +68,34 @@
     min-height: 100%;
 }
 
-.mainText {
+.display {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px;
+    grid-auto-rows: minmax(200px, auto);
     padding-left: 200px;
-    padding-top: 150px;
-    width: 400px;
+    padding-right: 200px;
+    padding-top: 100px;
+}
 
+.mainText {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.profilePicture {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.mainText2 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.mainTextP {
+    grid-column: 1;
+    grid-row: 2;
 }
 
 .mainText h1{
@@ -83,13 +108,35 @@
     font-family: 'Oswald', cursive;
 }
 
+.profilePicture {
+    text-align: center;
+    vertical-align: middle;
+}
+
+.profilePicture img {
+    border-radius: 15%;
+}
+
 .mainText h1:hover {
     color: rgba(247, 8, 175, 0.849);
     box-shadow: 5px 5px;
+    transition: 0.5s;
 }
 
-.mainText2 {
-    text-align: right;
-    padding-right: 200px;
+.mainText2 h1 {
+    text-align: center;
     font-family: 'Squada one', cursive;
+    font-weight: normal;
+    font-size: 40px;
+}
+
+.mainText2 p {
+    text-align: center;
+    font-family: 'Oswald', cursive;
+}
+
+.mainText2 h1:hover {
+    color: rgba(247, 8, 175, 0.849);
+    box-shadow: 5px 5px;
+    transition: 0.5s;
 }
