--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@
     padding-top: 20px;
     width: 100%;
     height: auto;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
 .video-bg {
@@ -75,7 +75,7 @@
     grid-auto-rows: minmax(200px, auto);
     padding-left: 200px;
     padding-right: 200px;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 
 .mainText {
@@ -131,12 +131,63 @@
 }
 
 .mainText2 p {
-    text-align: center;
+    text-align: right;
     font-family: 'Oswald', cursive;
 }
 
 .mainText2 h1:hover {
     color: rgba(247, 8, 175, 0.849);
     box-shadow: 5px 5px;
+    transition: 0.5s;
+}
+
+/* portfolio */
+
+.display2 {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 0px;
+    grid-auto-rows: minmax(300px);
+    padding-left: 20%;
+    padding-right: 20%;
+    text-align: center;
+}
+
+.text {
+    font-family: "Squada One";
+    font-size: 20px;
+}
+
+.portfolio-item {
+    max-width: 100%;
+    max-height: 200px;
+    overflow: hidden;
+    position: relative;
+}
+
+.portfolio-item img {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    object-fit: cover;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 10%;
+    left: 20%;
+    background-color: rgba(250, 219, 241, 0.7);
+    width: 100px;
+    height: 20px;
+}
+
+.portfolio-item:hover .middle {
+    opacity: 1;
+    color: rgba(247, 8, 175, 0.849);
     transition: 0.5s;
 }
