--- a/main.css
+++ b/main.css
@@ -73,8 +73,8 @@
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 100px;
     grid-auto-rows: minmax(200px, auto);
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 20%;
+    padding-right: 20%;
     padding-top: 50px;
 }
 
@@ -97,6 +97,12 @@
     grid-column: 1;
     grid-row: 2;
 }
+
+.mainText3 {
+    grid-column: 1;
+    grid-row: 3;
+}
+
 
 .mainText h1{
     font-family: 'Squada one',cursive;
@@ -140,6 +146,52 @@
     box-shadow: 5px 5px;
     transition: 0.5s;
 }
+
+.mainText3 h1 {
+    font-family: 'Squada one', cursive;
+    text-align: left;
+    font-weight: normal;
+    font-size: 40px;
+}
+
+.links {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
+    grid-gap: 50px;
+    grid-auto-rows: minmax(100px, auto);
+    padding-left: 500px;
+    padding-right: 20%;
+    text-align: center;
+
+}
+
+.github {
+    font-family: 'Oswald', cursive;
+    font-size: 12px;
+    background-color: rgba(247, 8, 175, 0.849);
+}
+
+.cv {
+    font-family: 'Oswald', cursive;
+    font-size: 12px;
+    background-color: rgba(247, 8, 175, 0.849);
+}
+
+.portfolio {
+    font-family: 'Oswald', cursive;
+    font-size: 12px;
+    background-color: rgba(247, 8, 175, 0.849);
+}
+
+.github:hover {
+    border-radius: 50%;
+    transition: 0.3s;
+}
+
+
+
+
 
 /* portfolio */
 
@@ -190,4 +242,12 @@
     opacity: 1;
     color: rgba(247, 8, 175, 0.849);
     transition: 0.5s;
+}
+
+.colourBackground {
+    background-color: rgba(233, 217, 228, 0.849);
+    padding-top: 80px;
+    padding-bottom: 20px;
+    text-align: center;
+    background-size: 50%;
 }
