--- a/main.css
+++ b/main.css
@@ -7,8 +7,7 @@
     font-size: 20px;
     padding-top: 20px;
     padding-bottom: 10px;
-    background-color: rgba(217, 215, 221, 0.9);
-    position: fixed;
+    background-color: rgba(194, 191, 194, 0.9);
 }
 
 .navigation ul {
@@ -47,34 +46,55 @@
    border-bottom: 4px solid black;
 }
 
+footer {
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    font-family: 'Squada One', cursive;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    background-color: rgba(194, 191, 194, 0.9);
+}
+
+
+
+
+
+
 /* index.html - about page */
 
+body {
+    background-color: rgb(243, 243, 235);
+}
 
 .container {
-    background-color: rgb(243, 243, 235);
+    /*background-color: rgb(243, 243, 235);*/
     padding-top: 20px;
     width: 100%;
     height: auto;
     padding-bottom: 40px;
 }
 
-.video-bg {
+.backgroundImage {
     position: absolute;
     z-index: -1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     min-width: 100%;
-    min-height: 100%;
+    min-height: 100%; 
+    opacity: 40%;
 }
+
 
 .display {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 100px;
     grid-auto-rows: minmax(200px, auto);
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 200px;
+    padding-right: 200px;
     padding-top: 50px;
 }
 
@@ -154,14 +174,21 @@
     font-size: 40px;
 }
 
+.mainText3 h1:hover {
+    color: rgba(247, 8, 175, 0.849);
+    box-shadow: 5px 5px;
+    transition: 0.5s;
+}
+
 .links {
     text-align: center;
     display: grid;
     grid-template-columns: 100px 100px 100px;
     grid-gap: 50px;
     grid-auto-rows: minmax(100px, auto);
-    padding-left: 20%;
+    padding-left: 35%;
     padding-right: 20%;
+    padding-top: 20px;
     text-align: center;
 
 }
@@ -191,8 +218,19 @@
     color: rgba(247, 8, 175, 0.849);
 }
 
+.cv:hover {
+    border-radius: 50%;
+    transition: 0.3s;
+    background-color: white;
+    color: rgba(247, 8, 175, 0.849);
+}
 
-
+.portfolio:hover {
+    border-radius: 50%;
+    transition: 0.3s;
+    background-color: white;
+    color: rgba(247, 8, 175, 0.849);
+}
 
 
 /* portfolio */
