--- a/main.css
+++ b/main.css
@@ -204,11 +204,18 @@ body {
     background-color: rgba(189, 187, 192, 0.438);
 }
 
+.link a {
+    text-decoration: none;
+    color: black;
+}
 
 .link:hover {
     border-radius: 50%;
     transition: 0.3s;
     background-color: white;
+}
+
+.link a:hover {
     color: rgba(247, 8, 175, 0.849);
 }
 
