--- a/main.css
+++ b/main.css
@@ -278,6 +278,9 @@ body {
     padding-bottom: 20px;
     text-align: center;
     background-size: 50%;
+    margin-bottom: 40px;
+    margin-left: 3rem;
+    margin-right: 3rem;
     
 }
 
