--- a/main.css
+++ b/main.css
@@ -334,3 +334,34 @@ body {
     margin:0 0 5px;
     display: inline-block;
 }
+
+/* cv page  */
+
+.containerGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 0px;
+    grid-auto-rows: minmax(100px, auto);
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+}
+
+.section1 {
+    grid-column: 1 ;
+    grid-row: 1/5;
+    background-color: blue;
+}
+
+.section2 {
+    grid-column: 2 ;
+    grid-row: 1/5;
+    background-color: blueviolet;
+}
+
+.section3 {
+    grid-column: 1 / 3 ;
+    grid-row: 5 / 6 ;
+    background-color: brown;
+}
