--- a/main.css
+++ b/main.css
@@ -395,38 +395,132 @@ button:hover {
     margin: auto;
 }
 
+.containerGrid h3 {
+    margin-block-start: 2px;
+    margin-block-end: 2px;
+}
+
+.containerGrid p {
+    margin-block-start: 2px;
+    margin-block-end: 15px;
+}
+
 .section1 {
     grid-column: 1 ;
     grid-row: 1/5;
-    background-color: blue;
+    background-color: rgba(166, 164, 168, 0.438);
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 20px;
+}
+
+.section1 h3 {
+    font-family: 'Squada One',cursive;
+    font-weight: normal;
+    font-size: 30px;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.imageCV {
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    width: 100%;
+}
+
+.contactDetails p {
+    font-family: 'Oswald',cursive;
+    font-size: 14px;
+}
+
+.contact {
+    text-align: center;
+    font-family: 'Oswald', cursive;
+    font-size: 14px;
+}
+
+.icons {
+    text-align: center;
+    font-size: 25px;
+    padding-top: 1rem;
+}
+
+.icons i:hover {
+    color: rgba(247, 8, 175, 0.849);
 }
 
 .section2 {
     grid-column: 2 ;
     grid-row: 1/5;
-    background-color: blueviolet;
+    background-color: rgba(189, 187, 192, 0.438);
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 20px;
+    font-family: 'Squada One', cursive;
 }
+
+.section2 h1 {
+    font-weight: normal;
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.section2 h3 {
+    font-weight: normal;
+}
+
+.section2 p {
+    font-family: 'Oswald', cursive;
+    font-size: 14px;
+}
+
+.cvParts h3 {
+    font-family: 'Squada One', cursive;
+    font-weight: normal;
+    font-size: 30px;
+    padding: 0;
+}
+
+.cvParts p {
+    font-family: 'Oswald', cursive;
+}
+
+.cvParts ul li {
+    font-family: 'Oswald', cursive;
+    font-weight: normal;
+    font-size: 14px;
+}
+
+.cvParts ul {
+    padding-inline-start: 20px;
+}
+
 
 .section3 {
     grid-column: 1 / 3 ;
     grid-row: 5 / 6 ;
-    background-color: brown;
+    background-color: rgba(189, 187, 192, 0.438);
+    font-family: 'Squada One', cursive;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 15px;
+    line-height: 20px;
 }
 
-.sectionRow {
-    display: block;
-    width: 100%;
+.section3 h3 {
+    font-weight: normal;
+    font-size: 30px;
+    padding-top: 1rem;
 }
 
-.sectionColumn1{
-    display: inline-block;
-    width: 50%;
+.section3 ul {
+    font-family: 'Oswald',cursive;
+    font-size: 14px;
+    
 }
 
-.sectionColumn2{
-    display: inline-block;
-    width: 50%;
-}
 
 @media only screen and (min-height: 1188px) {
     .container {
