--- a/main.css
+++ b/main.css
@@ -382,6 +382,18 @@ button:hover {
 
 /* cv page  */
 
+.title h1 {
+    font-family: 'Squada One', cursive;
+    font-weight: normal;
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.title h1:hover {
+    color: rgba(247, 8, 175, 0.849);
+}
+
 .containerGrid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -518,7 +530,7 @@ button:hover {
 .section3 ul {
     font-family: 'Oswald',cursive;
     font-size: 14px;
-    
+
 }
 
 
