--- a/main.css
+++ b/main.css
@@ -82,9 +82,9 @@ footer a:hover {
     color: rgba(247, 8, 175, 0.849);
 }
 
-
-/* index.html - about page */
-
+/* applies stlying to the body tag by setting the background colour, setting the margin to 0 as it automatically implements
+a border of 8px around the body content. The position is set to relative and the overflow on the x axis is hidden to stop 
+the scroll bar appearing for the background image */
 body {
     background-color: rgb(243, 243, 235);
     overflow-x: hidden;
@@ -92,24 +92,25 @@ body {
     position: relative;
 }
 
+/* index.html - about page */
+
 .container {
-    /*background-color: rgb(243, 243, 235);*/
     padding-top: 20px;
     width: 100%;
     height: auto;
     overflow-x: hidden;
-    /* padding-bottom: 40px; */
 }
 
+/* the background image holds the image of the laptop which shows in the background on the homepage. This is done by setting the image position
+as absolute so it stays where it is, the z index sets the position to be the first before any other elements within the page. The opacity 
+is set to 40% so the image isnt as clear, not distracting people from the important information shown on the page. The position is set to the 
+center and the background size to cover the whole page. The background repeat is used for when the image is smaller than the page it will repeat it 
+over and over again, by setting this to no-repeat it wont do this. the url is the image and the width and height are set to 100 vertical width and 
+100% of the height to make it fit the whole screen. */
 .backgroundImage {
     position: absolute;
     z-index: -1;
     opacity: 40%;
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100vw;
-    height: 100%;  */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -118,11 +119,16 @@ body {
     height: 100%;
     top: 0;
 }
+
+/* sets the veritcal width of the image inside the class to 100 % of the vertical width so it covers the whole of the screen, this 
+also helps make the page more responsive */
 .backgroundImage img {
     width: 100vw;
 }
 
-
+/* the display class sets up a grid display with the template columns to repeat 2, 1 fr, the grid gap is 100px and the grid rows are set 
+to be 200px and automatically implemented when the row overflows. Padding is added to the sides to create appropriate spacing around the 
+grid*/
 .display {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -133,57 +139,71 @@ body {
     padding-top: 50px;
 }
 
+/* sets the grid position to column and row 1  */
 .mainText {
     grid-column: 1;
     grid-row: 1;
 }
 
+/* sets the grid position to column 2 and row 1  */
 .profilePicture {
     grid-column: 2;
     grid-row: 1;
 }
 
+/* sets the grid position to column and row 2  */
 .mainText2 {
     grid-column: 2;
     grid-row: 2;
 }
 
+/* sets the grid position to column 1 and row 2 */
 .mainTextP {
     grid-column: 1;
     grid-row: 2;
 }
 
+/* sets the grid position to column 1 and row 3 */
 .mainText3 {
     grid-column: 1;
     grid-row: 3;
 }
 
-
+/* styles the main text h1 element by setting the font family to the google api squada one title font, the font size
+to 40px and the font weight to normal, when styling the text without the font weight set to none the text was bolder twice making 
+it look blury, by setting the weight to normal it makes the font look a lot clearer */
 .mainText h1{
     font-family: 'Squada one',cursive;
     font-size: 40px;
     font-weight: normal;
 }
 
+/* sets the p text in the mainText class to oswald my chosen paragraph font from the google api */
 .mainText p {
     font-family: 'Oswald', cursive;
 }
 
+/* aligns the content of the profilePicture class centeral and vertically aligns it in the middle of the div */
 .profilePicture {
     text-align: center;
     vertical-align: middle;
 }
 
+/* adds a 15% border radius onto the image within the class */
 .profilePicture img {
     border-radius: 15%;
 }
 
+/* when the main text h1 element is hovered over the colour is changes to pink and box shadow is added to create an underlining
+deisgn effect, this has a 0.5 transition speed to make it gradual */
 .mainText h1:hover {
     color: rgba(247, 8, 175, 0.849);
     box-shadow: 5px 5px;
     transition: 0.5s;
 }
 
+/* styles the h1 heading in the class by aligning it the center and setting the font family and weight to normal, the font size is also set 
+to the same size as all other headings to make a consistancy throughout the website */
 .mainText2 h1 {
     text-align: center;
     font-family: 'Squada one', cursive;
@@ -191,17 +211,22 @@ body {
     font-size: 40px;
 }
 
+/* aligns the text right within the p tag in the mainText2 class and sets the font to oswald the google api font  */
 .mainText2 p {
     text-align: right;
     font-family: 'Oswald', cursive;
 }
 
+/* when the main text h1 element is hovered over the colour is changes to pink and box shadow is added to create an underlining
+deisgn effect, this has a 0.5 transition speed to make it gradual */
 .mainText2 h1:hover {
     color: rgba(247, 8, 175, 0.849);
     box-shadow: 5px 5px;
     transition: 0.5s;
 }
 
+/* styles the h1 element inside the class by setting the font family to squada one, align the text on the left, set the weight to normal
+and set the font size to 40px */
 .mainText3 h1 {
     font-family: 'Squada one', cursive;
     text-align: left;
@@ -209,12 +234,18 @@ body {
     font-size: 40px;
 }
 
+/* when the main text h1 element is hovered over the colour is changes to pink and box shadow is added to create an underlining
+deisgn effect, this has a 0.5 transition speed to make it gradual */
 .mainText3 h1:hover {
     color: rgba(247, 8, 175, 0.849);
     box-shadow: 5px 5px;
     transition: 0.5s;
 }
 
+/* the links class is used to set up the grid for the three links, first the text is aligned centrally then the grid is set up. The grid
+has three template columns all are 100px with a 50px grid gap between them. The rows are set to auto row which will be 100p. padding is added 
+to all four of the sides to position them in the correct place, the bakcground colour is then set to make them stand out to the user and 
+contrast from the background image */
 .links {
     text-align: center;
     display: grid;
@@ -225,31 +256,37 @@ body {
     padding-right: 20%;
     padding-top: 50px;
     padding-bottom: 40px;
-    text-align: center;
     background-color: rgb(243, 243, 235);
 }
 
+/* sets the font family to oswald, the font size to 11px as its a smaller part of the text and sets the background colour to below */
 .link {
     font-family: 'Oswald', cursive;
     font-size: 11px;
     background-color: rgba(189, 187, 192, 0.438);
 }
 
+/* styles the a element inside the link class by removing decoration on the text which is put on as its a link and setting the colour
+of the text to black */
 .link a {
     text-decoration: none;
     color: black;
 }
 
+/* changes the font weight to be normal for the h1 element */
 .link a h1 {
     font-weight: normal;
 }
 
+/* when the link class is hovered over the border radius will change to show a circle shape and the background will turn white,
+this will be done at a transition speed of 0.3 seconds */
 .link:hover {
     border-radius: 50%;
     transition: 0.3s;
     background-color: white;
 }
 
+/* when the link a elements are hovered over the colour will change to pink  */
 .link a:hover {
     color: rgba(247, 8, 175, 0.849);
 }
@@ -544,7 +581,8 @@ button:hover {
 
 }
 
-
+/* the media query is set so when the height gets to 1188px the height of the container class will change to 87 of the vertical height of
+the screen, this stops the elongating of the page when the screen gets wider so the height moves down also. */
 @media only screen and (min-height: 1188px) {
     .container {
         height: 87vh;
