--- a/main.css
+++ b/main.css
@@ -489,27 +489,35 @@ button:hover {
     width: 100%;
 }
 
+/*  */
 .contactDetails p {
     font-family: 'Oswald',cursive;
     font-size: 14px;
 }
 
+/* styles the contact section  */
 .contact {
     text-align: center;
     font-family: 'Oswald', cursive;
     font-size: 14px;
 }
 
+/* styles the icon class by aligning text into the center, setting the font size to 25px and adding 1 rem of padding 
+on the top */
 .icons {
     text-align: center;
     font-size: 25px;
     padding-top: 1rem;
 }
 
+/* when the icons are hovered over they will turn a pink colour */
 .icons i:hover {
     color: rgba(247, 8, 175, 0.849);
 }
 
+/* styles the section2 class by positioning it within the grid by assigning it to grid column 2 and grid row 1/5,
+the background colour is then set to the same colour used within the navigation, the font family is set to the header font
+squada one. Padding is then added for 1 rem to the right and the left and 20px to the bottom of the class */
 .section2 {
     grid-column: 2 ;
     grid-row: 1/5;
@@ -520,6 +528,8 @@ button:hover {
     font-family: 'Squada One', cursive;
 }
 
+/* styles the h1 text within the section 2 class by setting the font weight to normal, setting the font size to 40px
+sets the text to align in the center and a 10px margin along the bottom.  */
 .section2 h1 {
     font-weight: normal;
     font-size: 40px;
@@ -527,15 +537,19 @@ button:hover {
     margin-bottom: 10px;
 }
 
+/* sets the h3 font weight to normal to combat the fuzzy looking font when its not set to normal */
 .section2 h3 {
     font-weight: normal;
 }
 
+/* sets the paragraph text in the section 2 class to the font familt oswald and the font size to 14px */
 .section2 p {
     font-family: 'Oswald', cursive;
     font-size: 14px;
 }
 
+/* styles the h3 tag inside the class by setting the font family to squada one setting the font weight to normal and the font 
+size to 30px, padding is set to 0. */
 .cvParts h3 {
     font-family: 'Squada One', cursive;
     font-weight: normal;
@@ -543,21 +557,29 @@ button:hover {
     padding: 0;
 }
 
+/* styles the paragraph tag by setting the font family to oswald */
 .cvParts p {
     font-family: 'Oswald', cursive;
 }
 
+/* styles the list items in the unordered list in the class by setting the font family to oswald the paragraph font
+for the document, setting the weight to normal and the font size to 14px */
 .cvParts ul li {
     font-family: 'Oswald', cursive;
     font-weight: normal;
     font-size: 14px;
 }
 
+/* styles the unordered list in the class by adding padding inline start of 20px to set the start of the padding 
+20px in rather than the orginal position */
 .cvParts ul {
     padding-inline-start: 20px;
 }
 
-
+/* styles the section 3 class by first setting up its grid position, this is done by setting the column to 1/3
+and the row to 5/6. The background colour is then set and the font family is Squada one the websites heading font
+from the google api. Padding is used to add spacing to the right, left and bottom. The line height has been set to
+20px to stop the large gap between each list item which effected the look of the information */
 .section3 {
     grid-column: 1 / 3 ;
     grid-row: 5 / 6 ;
@@ -569,12 +591,16 @@ button:hover {
     line-height: 20px;
 }
 
+/* styles the h3 element inside the section 3 by setting the font weight to normal, setting the font size to 30px
+and adding 1 rem of padding on the top of the class creating reasonal spacing */
 .section3 h3 {
     font-weight: normal;
     font-size: 30px;
     padding-top: 1rem;
 }
 
+/* styles the unordered list in section 3 by setting the font family to oswald the google fonts api and sets
+the font size to 14px, the same as all the other paragraph text. */
 .section3 ul {
     font-family: 'Oswald',cursive;
     font-size: 14px;
