--- a/main.css
+++ b/main.css
@@ -360,6 +360,8 @@ this will be done at a transition speed of 0.3 seconds */
     
 }
 
+/* styles the h1 inside the heading class by setting the font family to squada one, setting the font weight to normal
+and the font size to 40px which is the heading size for the house style */
 .heading h1 {
     font-family: 'Squada one', cursive;
     font-weight: normal;
@@ -368,10 +370,12 @@ this will be done at a transition speed of 0.3 seconds */
 
 /* contact form */
 
+/* aligns all the containing objects centeral */
 .wrapper {
     text-align: center;
 }
 
+/*  */
 .contactContainer {
     padding-bottom: 3rem;
     max-width: 400px;
@@ -447,8 +451,6 @@ button:hover {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 0px;
     grid-auto-rows: minmax(100px, auto);
-    /* padding-left: 30%;
-    padding-right: 30%; */
     padding-bottom: 2rem;
     padding-top: 2rem;
     max-width: 40%;
@@ -615,8 +617,11 @@ the screen, this stops the elongating of the page when the screen gets wider so 
     }
 }
 
-/* TABLET */
+/* creates a media query for a tablet version of the site at the breaking point 1023, so when the screen is under
+this width it will style the elements by changing the following; */
 @media only screen and (max-width: 1023px) {
+    /* sets the width of the display grid to 70% and centers the content through using margin auto, change padding
+    on the left and the right to 0 to remove it */
     .display {
         max-width: 70%;
         margin: auto;
@@ -624,45 +629,55 @@ the screen, this stops the elongating of the page when the screen gets wider so 
         padding-right: 0;
     }
 
+    /* stlyes the image inside the maintextp class by setting the width to 100%*/
     .mainTextP img {
         width: 100%;
     }
 
+    /* adds 25% padding to the left of the links class */
     .links {
         padding-left: 25%
     }
 
+    /*sets the container grid class to a max width of 70%*/
     .containerGrid {
         max-width: 70%;
     }
 }
 
-/* MOBILE */
+/* creates a media query for a mobile verison of the site at the break point 639px, so when the screen is under 
+this width it will change the layout to the stated below; */
 @media only screen and (max-width: 639px) {
+    /* changes the grid column to only 1 rather than 2 */
     .display {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    /* sets the column to 1 and the row to 2 */
     .profilePicture {
         grid-column: 1;
         grid-row: 2;
     }
     
+    /* sets the column to 1 and the row to 3 */
     .mainText2 {
         grid-column: 1;
         grid-row: 3;
     }
     
+    /* sets the column to 1 and the row to 4 */
     .mainTextP {
         grid-column: 1;
         grid-row: 4;
     }
 
+    /* sets the column to 1 and the row to 5  */
     .mainText3 {
         grid-column: 1;
         grid-row: 5;
     }
 
+    /* removes the padding from the left and right setting it to 0 and sets the grid 10 1 column */
     .links{
         padding-left: 0;
         padding-right: 0;
@@ -670,6 +685,8 @@ the screen, this stops the elongating of the page when the screen gets wider so 
         
     }
 
+    /* sets the column position to 1 and resets the width and height to 100px, margin auto centers the class 
+    by adding equal padding on ethier side */
     .link {
         grid-column: 1;
         width: 100px;
@@ -677,12 +694,14 @@ the screen, this stops the elongating of the page when the screen gets wider so 
         margin: auto;
     }
 
+    /* resets the grid display to 1 column and adds a grid gap of 10px between the projects */
     .display2 {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 10px;
     }
 
+    /* sets the portfolio item class to column 1 */
     .portfolio-item {
         grid-column: 1;
     }
